fix: z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,5 +25,5 @@
   min-height: 100vh;
   position: sticky;
   top: 1px;
-  z-index: 999999;
+  // z-index: 999999;
 }
